fix(UPI-2450): update UPI Setu payment, mandate, refund notification payloads
Changes:
- update UPI Setu payment, mandate, refund notification payloads

Closes UPI-2450

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -55,7 +55,7 @@ A mandate can have any of the below statuses throughout its life-cycle—
       merchant before expiry
     </li>
     <li>
-      <code>mandate.complete</code>&nbsp;Mandate executions are done, and now
+      <code>mandate.completed</code>&nbsp;Mandate executions are done, and now
       mandate is closed
     </li>
   </ul>
