--- a/content/payments/umap/mandates/recur/create.mdx
+++ b/content/payments/umap/mandates/recur/create.mdx
@@ -326,7 +326,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
           </p>
           <ul>
             <li>
-              <b>mandate.initiated</b>
+              <b>mandate.initiated</b> (if no validation errors are encountered on UPI Setu during mandate creation)
             </li>
             <li>
               <b>mandate_operation.create.initiated</b>
@@ -339,7 +339,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
               successful)
             </li>
             <li>
-              <b>mandate.rejected</b> (if mandate creation fails)
+              <b>mandate.rejected</b> (if mandate creation fails due to mandate intent / qr expiry)
             </li>
             <li>
               <b>mandate_operation.create.failed</b> (if mandate creation fails)
