--- a/content/payments/umap/refunds-disputes/create-refund-api.mdx
+++ b/content/payments/umap/refunds-disputes/create-refund-api.mdx
@@ -111,10 +111,10 @@ visible_in_sidebar: true
 <p>UPI Setu sends notifications to the merchants for the following events:</p>
 <ul>
   <li>
-    <b>refund.sucess</b> (if refund is successful)
+    <b>refund.pending</b> (if refund is initiated successfully)
   </li>
   <li>
-    <b>refund.failed</b> (if refund fails)
+    <b>refund.successful</b> (if refund is successful)
   </li>
 </ul>
 <p>
