--- a/content/payments/umap/mandates/reserve/create.mdx
+++ b/content/payments/umap/mandates/reserve/create.mdx
@@ -210,7 +210,7 @@ There are two ways to create a Reserve mandate—**Intent based** and **Collect 
           </p>
           <ul>
             <li>
-              <b>mandate.initiated</b>
+              <b>mandate.initiated</b> (if no validation errors are encountered on UPI Setu during mandate creation)
             </li>
             <li>
               <b>mandate_operation.create.initiated</b>
@@ -223,7 +223,7 @@ There are two ways to create a Reserve mandate—**Intent based** and **Collect 
               successful)
             </li>
             <li>
-              <b>mandate.rejected</b> (if mandate creation fails)
+              <b>mandate.rejected</b> (if mandate creation fails due to mandate intent / qr expiry)
             </li>
             <li>
               <b>mandate_operation.create.failed</b> (if mandate creation fails)
