--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -57,7 +57,7 @@ A quick summary of the general statuses associated with a mandate—
       from this customer would need a new mandate to be set up
     </li>
     <li>
-      <code>mandate.complete</code> All mandate executions are complete
+      <code>mandate.completed</code> All mandate executions are complete
     </li>
   </ul>
 </Text>
