--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -38,8 +38,8 @@ their customers informed.
 
 UPI Setu also sends notifications to the merchants for the following events—
 
-- `refund_success`
-- `refund_failed`
+- `refund.pending`
+- `refund.successful`
 
 Read more about refund status notifications <a href="/payments/umap/notifications/refunds">here</a>.
 
