fix(UPI-2450): fix UPI Setu notification payloads
Changes:
- fix UPI Setu notification payloads

Closes UPI-2450

--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -37,7 +37,7 @@ When a customer initiates pausing a mandate from their UPI app, UPI Setu will se
     <code>mandate_operation.pause.failed</code>, &nbsp; if pause fails
   </Text>
 - <Text>
-    <code>mandate.live</code>, &nbsp; terminal status, if pause fails
+    <code>A mandate status notification</code> to indicate current mandate status, &nbsp;if mandate pause fails (Example: mandate.live if mandate is in live state)
   </Text>
 
 Read more about <a href="/payments/umap/notifications/mandates" target="_blank">mandate status notifications </a> and <a href="/payments/umap/notifications/mandates/pause" target="_blank">mandate pause operation notifications</a>.
