--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -54,7 +54,7 @@ webhooks for following events
     <code>mandate_operation.revoke.failed</code>,&nbsp;if mandate revoke fails
   </Text>
 - <Text>
-    <code>mandate.live</code>,&nbsp;if mandate revoke fails
+    <code>A mandate status notification</code> to indicate current mandate status, &nbsp;if mandate revoke fails (Example: mandate.live if mandate is in live state)
   </Text>
 
 <p>
@@ -172,7 +172,7 @@ following events:
     <b>mandate_operation.revoke.success</b> (if mandate revoke is successful)
   </li>
   <li>
-    <b>mandate.live</b> (if mandate revoke fails)
+    <b>A mandate status notification to indicate current mandate status</b> (if mandate revoke fails) (Example: mandate.live if mandate is in live state)
   </li>
   <li>
     <b>mandate_operation.revoke.failed</b> (if mandate revoke fails)
