--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -33,7 +33,7 @@ Only the end customer has the option of unpausing a paused UPI mandate from thei
     <b>mandate_operation.unpause.success</b> (if mandate unpause is successful)
   </li>
   <li>
-    <b>mandate.paused</b> (if mandate unpause fails)
+    <b>A mandate status notification to indicate current mandate status</b> (if mandate unpause fails) (Example: mandate.paused if mandate is in paused state)
   </li>
   <li>
     <b>mandate_operation.unpause.failed</b> (if mandate unpause fails)
