--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -142,7 +142,7 @@ There are only two updates possible on a UPI mandate
               successful)
             </li>
             <li>
-              <b>mandate.live</b> (if mandate update fails)
+              <b>A mandate status notification to indicate current mandate status</b> (if mandate update fails) (Example: mandate.live if mandate is in live state)
             </li>
             <li>
               <b>mandate_operation.update.failed</b> (if mandate update fails)
@@ -268,7 +268,7 @@ There are only two updates possible on a UPI mandate
               successful)
             </li>
             <li>
-              <b>mandate.live</b> (if mandate update fails)
+              <b>A mandate status notification to indicate current mandate status</b> (if mandate update fails) (Example: mandate.live if mandate is in live state)
             </li>
             <li>
               <b>mandate_operation.update.failed</b> (if mandate update fails)
