--- a/content/payments/umap/notifications/mandates/execute.mdx
+++ b/content/payments/umap/notifications/mandates/execute.mdx
@@ -25,15 +25,13 @@ These are the available webhooks for merchants, when they execute mandates being
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // Mandate execution ID
   "operation": "execute",                            
   "status": "initiated",                             
-  
   // Empty reason object for initiated status
   "reason": {},
-
   // Merchant and Reference Information
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate execution reference ID
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1",                                      // Sequence number for the execution
@@ -43,7 +41,7 @@ These are the available webhooks for merchants, when they execute mandates being
     "txnId": "HDF10e4ab8a07f447eea54581383d92b507",   // NPCI Txn.id
     "paymentId": "01JYXYSV8B19XAWSFRPARXY35E",        // payment id
     "rrn": "123456789012",                            // NPCI Txn.custRef
-    "customerVpa": "customer@bank",                   // Customer's VPA
+    "customerVpa": "9650974246@ybl",                  // Customer's VPA
     "paymentStatus": "initiated",                     // Status of the payment
     "customerAccountType": "SAVINGS"                  // Payer account type
   }
@@ -66,7 +64,6 @@ These are the available webhooks for merchants, when they execute mandates being
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // Mandate execution ID
   "operation": "execute",                             
   "status": "success",                                
-  
   // Success reason object
   "reason": {
     "code": "mandate-execution-success",              // Reason code
@@ -79,12 +76,11 @@ These are the available webhooks for merchants, when they execute mandates being
     "setuDescription": "",                            // Setu description
     "suggestedAction": ""                             // Suggested action
   },
-
   // Merchant and Reference Information
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate execution referenceId
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1",                                      // Sequence number for the execution
@@ -94,7 +90,7 @@ These are the available webhooks for merchants, when they execute mandates being
     "txnId": "HDF10e4ab8a07f447eea54581383d92b507",   // NPCI Txn.id
     "paymentId": "01JYXYSV8B19XAWSFRPARXY35E",        // payment id
     "rrn": "123456789012",                            // NPCI Txn.custRef
-    "customerVpa": "customer@bank",                   // Customer's VPA
+    "customerVpa": "9650974246@ybl",                  // Customer's VPA
     "paymentStatus": "success",                       // Status of the payment
     "customerAccountType": "SAVINGS"                  // Payer account type
   }
@@ -121,25 +117,23 @@ These are the available webhooks for merchants, when they execute mandates being
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // Mandate execution ID
   "operation": "execute",                            
   "status": "failed",                                
-  
   // Failure reason object
   "reason": {
     "code": "mandate-execution-failed",               // Reason code
     "desc": "INVALID / INCORRECT MPIN",               // Reason description
     "npciErrCode": "U30",                             // NPCI error code
     "npciErrDesc": "DEBIT HAS BEEN FAILED",           // NPCI error code description
-    "npciErrCategory": "BD",                         // NPCI error category
+    "npciErrCategory": "BD",                          // NPCI error category
     "npciRespCode": "ZM",                             // NPCI response code
     "npciRespDesc": "INVALID / INCORRECT MPIN",       // NPCI response code description
     "setuDescription": "",                            // Setu description
     "suggestedAction": ""                             // Suggested action
   },
-
   // Merchant and Reference Information
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate execution referenceId
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1",                                      // Sequence number for the execution
@@ -149,7 +143,7 @@ These are the available webhooks for merchants, when they execute mandates being
     "txnId": "HDF10e4ab8a07f447eea54581383d92b507",   // NPCI Txn.id
     "paymentId": "01JYXYSV8B19XAWSFRPARXY35E",        // payment id
     "rrn": "123456789012",                            // NPCI Txn.custRef
-    "customerVpa": "customer@bank",                   // Customer's VPA
+    "customerVpa": "9650974246@ybl",                  // Customer's VPA
     "paymentStatus": "failed",                        // Status of the payment
     "customerAccountType": "SAVINGS"                  // Payer account type
   }
