--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -41,7 +41,7 @@ UPI Setu has consistent and transparent payment statuses across all transaction 
 | **Payment statuses** | **Description**                                  |
 | -------------------- | ------------------------------------------------ |
 | `payment.initiated`  | Payment has been attempted by a customer         |
-| `payment.ending`     | Payment is currently being processed by UPI Setu |
+| `payment.pending`    | Payment is currently being processed by UPI Setu |
 | `payment.success`    | Payment has been successfully completed          |
 | `payment.failed`     | Payment could not be processed                   |
 
