--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -51,14 +51,9 @@ In addition to notifications, merchants can also use the <a href="/payments/umap
 
 **Refund statuses**
 
-- `refund_initiated` Refund request has been
-  create at UPI Setu
-- `refund_pending` Refund is in queue for
-  being processed
+- `refund_pending` Refund has been initiated successfully
 - `refund_successful` Refund has been
   successfully completed
-- `refund_failed` Refund could not be
-  processed
   <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
     alt="Bridge"
