--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -37,7 +37,8 @@ A quick summary of the general statuses associated with a mandate—
     </li>
     <li>
       <code>mandate.live</code> Customer has authorised the mandate, and the
-      mandate is active
+      mandate is active. Or the customer has unpaused a paused mandate and the
+      mandate is active again
     </li>
     <li>
       <code>mandate.rejected</code> The mandate could not be set up, due to some
@@ -46,10 +47,6 @@ A quick summary of the general statuses associated with a mandate—
     <li>
       <code>mandate.paused</code> The customer has decided to pause executions
       for mandate, which can be temporary
-    </li>
-    <li>
-      <code>mandate.unpaused</code> The customer has decided to unpause
-      executions for mandate, and mandate is active again
     </li>
     <li>
       <code>mandate.revoked</code> The customer has decided to stop executions
