--- a/content/payments/umap/notifications/mandates/notify.mdx
+++ b/content/payments/umap/notifications/mandates/notify.mdx
@@ -25,15 +25,11 @@ These are the available webhooks for merchants, when they notify their customers
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // mandate pre-debit notification id
   "operation": "notify",                             
   "status": "initiated",                             
-  
-  // Empty reason object for initiated status
-  "reason": {},
-
-  // Merchant and Reference Information
+  "reason": {},                                       // Empty reason object for initiated status
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // Merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate pre-debit notification referenceId
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1"                                       // Sequence number for the notification
@@ -56,7 +52,6 @@ These are the available webhooks for merchants, when they notify their customers
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // Mandate pre-debit notification id
   "operation": "notify",                             
   "status": "success",                               
-  
   "reason": {
     "code": "mandate-notification-success",           // Reason code
     "desc": "mandate notification has succeeded",     // Reason description
@@ -68,12 +63,10 @@ These are the available webhooks for merchants, when they notify their customers
     "setuDescription": "",                            // Setu description
     "suggestedAction": ""                             // Suggested action
   },
-
-  // Merchant and Reference Information
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // Merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate pre-debit notification referenceId
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1"                                       // Sequence number for the notification
@@ -96,7 +89,6 @@ These are the available webhooks for merchants, when they notify their customers
   "id": "01JYXYSV8B19XAWSFRPARXY35E",                 // Mandate pre-debit notification id
   "operation": "notify",                             
   "status": "failed",                               
-  
   "reason": {
     "code": "mandate-notification-failed",            // Reason code
     "desc": "INVALID VIRTUAL ADDRESS",                // Reason description
@@ -108,12 +100,10 @@ These are the available webhooks for merchants, when they notify their customers
     "setuDescription": "",                            // Setu description
     "suggestedAction": ""                             // Suggested action
   },
-
-  // Merchant and Reference Information
   "merchantId": "01JYXYSV8B19XAWSFRPARXY35E",         // Merchant ID
   "merchantReferenceId": "mandate_123456789",         // mandate pre-debit notification referenceId
   "txnId": "HDF10e4ab8a07f447eea54581383d92b507",     // NPCI Txn.id
-  "umn": "customer@bank",                             // Unique Mandate Number from NPCI
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",    // Unique Mandate Number from NPCI
   "mandateId": "01JYXYSV8B19XAWSFRPARXY35E",          // ID of the mandate being operated on
   "amount": 1000,                                     // Amount in paise
   "seqNum": "1"                                       // Sequence number for the notification
