made requested changes

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -193,6 +193,8 @@ The Payment Bill object contains information about a specific bill to be paid.
 | `RESOLVED`        | After successful resolution of the dispute, the status is updated to resolved in favour of the customer.                                               |
 | `REJECTED`        | The complaint is rejected by the Biller/BBPOU.                                                                                                          |
 | `DEFAULT_RESOLVED` | If no action is taken by Biller/BBPOU then NPCI automatically resolves the dispute in favour of the customer.                                          |
+| `REFUNDED`         | Refund successfully processed and completed in favour of the customer.                                                                          |
+| `PENDING_REFUND`   | Refund approved and currently being processed.                                                                 |
 
 ## Bill Period
 
