feature(bill payments): plan mdm integration guide (#278)
* feature(bill payments): plan mdm integration guide

* made requested changes

* made some ordering changes

* made some changes

* made some changes

* made some changes

---------

Co-authored-by: Dhirajkumar55 <dhirajkumarchintada@Setus-MacBook-Pro.local>
Co-authored-by: dhiraj.kumar5 <dhiraj.kumar@setu.co>

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -313,6 +313,15 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     <li>
         <a
             target="_blank"
+            href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/bills/plans/get"
+        >
+            List plans
+        </a>
+        —lists all plans for billers on BBPS.
+    </li>
+    <li>
+        <a
+            target="_blank"
             href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getDisputes"
         >
             List disputes
@@ -326,10 +335,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
         >
             List fetched Bills
         </a>
-        —lists all the fetched bills that were fetched using <a
-            target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Fetch_bill/operation~FetchRequest"
-        >
+        —lists all the fetched bills that were fetched using <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Fetch_bill/operation~FetchRequest">
             Fetch API
         </a>.
     </li>
@@ -340,10 +346,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
         >
             List paid bills
         </a>
-        —lists all the bill pay transactions paid using <a
-            target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Pay_bill/operation~PaymentRequest"
-        >
+        —lists all the bill pay transactions paid using <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Pay_bill/operation~PaymentRequest">
             Pay API
         </a>.
     </li>
