--- a/content/data/insights/error-code.mdx
+++ b/content/data/insights/error-code.mdx
@@ -47,7 +47,7 @@ The error object contains:
 
 ### Error codes reference
 
-All possible error codes returned by the API:
+All possible error codes that we support:
 
 | Code | Description |
 |------|-------------|
