Update BBPS API documentation and remove deprecated content
- Add example value for token expiry in API schema - Remove deprecated
documentation files and redundant transaction examples - Update webhook
documentation with improved examples and event types - Fix relative
links in API references across multiple documentation pages - Add
`<WasPageHelpful>` component to relevant documentation sections

--- a/content/payments/billpay/api-integration/bbps-v1_1-features.mdx
+++ b/content/payments/billpay/api-integration/bbps-v1_1-features.mdx
@@ -1140,97 +1140,4 @@ Only one of the payment options specified in the fetch response can be selected:
 </Card>
 <br />
 
-
-<br/>
-
-
-## Getting details of paid bills
-
-The List Transactions API response now includes a new `bills` array element, providing detailed information about the bills involved in each transaction.
-
-### Response
-
-The `bills` array in the List Transactions API response contains objects with `billNumber` and `amount` for each bill involved in the transaction.
-
-### Examples
-
-#### LIST Transactions
-
-1. The `bills` array in the response matches the `bills` array from the payment request.
-2. It includes bills paid in the transaction (as present in payment request), regardless of the selection type.
-
-<Card padding="nano" shape="rounded">
-    <details>
-        <summary>
-            <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response
-            </Text>
-        </summary>
-<CodeBlockWithCopy language="json">{`
-{
-  "transactions": [
-    {
-      // ... other transaction details ...
-      "bills": [
-        { "billNumber": "BILL001", "amount": 100000 },
-        { "billNumber": "BILL002", "amount": 150000 }
-      ]
-    }
-  ]
-}
-`}</CodeBlockWithCopy>
-</details>
-</Card>
-<br />
-
-### SINGLE Billers (Bill Present in Fetch Response)
-
-The `bills` array contains one object with the `billNumber` and `amount` of the bill paid.
-
-<Card padding="nano" shape="rounded">
-    <details>
-        <summary>
-            <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response
-            </Text>
-        </summary>
-<CodeBlockWithCopy language="json">{`
-{
-  "transactions": [
-    {
-      // ... other transaction details ...
-      "bills": [
-        { "billNumber": "BILL001", "amount": 100000 }
-      ]
-    }
-  ]
-}
-`}</CodeBlockWithCopy>
-</details>
-</Card>
-<br />
-
-### SINGLE Billers (No Bill in Fetch Response)
-
-An empty `bills` array is returned.
-
-<Card padding="nano" shape="rounded">
-    <details>
-        <summary>
-            <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response
-            </Text>
-        </summary>
-<CodeBlockWithCopy language="json">{`
-{
-  "transactions": [
-    {
-      // ... other transaction details ...
-      "bills": []
-    }
-  ]
-}
-`}</CodeBlockWithCopy>
-</details>
-</Card>
-<br />
+<WasPageHelpful />
