--- a/content/payments/billpay/api-integration/plan-mdm-integration.mdx
+++ b/content/payments/billpay/api-integration/plan-mdm-integration.mdx
@@ -973,3 +973,5 @@ It is similar to this  <a href="/payments/billpay/api-integration/webhooks#bill-
     </details>
 </Card>
 <br />
+
+<WasPageHelpful />
