--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -212,8 +212,7 @@ The bill payment request API has been enhanced to include remitter details under
 
 | Payment Mode | Value Example | Length Constraints | NPCI Code | Description |
 |--------------|---------------|-------------------|-----------|-------------|
-| **IMPS** | <code>9240111\|9004644121</code> | Fixed: 18 | MMID\|MobileNo | MMID and mobile number used for payment |
-| **NEFT, AccountTransfer, BharatQR, InternetBanking** | <code>SRAN0000341\|9912345123456</code> | Min: 3, Max: 50 | IFSC\|AccountNo | IFSC and account number used for payment |
+| **AccountTransfer, BharatQR, InternetBanking** | <code>SRAN0000341\|9912345123456</code> | Min: 3, Max: 50 | IFSC\|AccountNo | IFSC and account number used for payment |
 | **CreditCard, DebitCard, PrepaidCard** | <code>1234567890123456\|123456</code> | Min: 3, Max: 50 | CardNum\|AuthCode | Card number and authorization code used for payment |
 | **UPI** | `dummy@ybl` | Min: 3, Max: 50 | VPA | Virtual Provider Address used for payment |
 | **Wallet** | <code>PayTM\|9004644121</code> | Min: 12, Max: 50 | WalletName\|MobileNo | Wallet name and mobile number used for payment |
@@ -244,3 +243,4 @@ The following table provides detailed formatting specifications for different NP
 - If remitter details or account information are not available, the fields should be omitted entirely
 - System automatically handles fallback scenarios
 
+<WasPageHelpful />
