--- a/content/payments/billpay/api-integration/bbps-v1_1-features.mdx
+++ b/content/payments/billpay/api-integration/bbps-v1_1-features.mdx
@@ -9,6 +9,10 @@ visible_in_sidebar: true
 
 ## Overview
 
+This guide covers advanced BBPS V1.1 features for multi-bill processing and flexible payment configurations.
+
+📖 **For basic payment integration and API fundamentals → [Paying Bills Integration Guide](./paying_bills.mdx)**
+
 Setu's BBPS BillPay APIs have been upgraded to align with BBPS V1.1 specifications, introducing powerful new capabilities that enhance flexibility and user experience in bill payment processing. This comprehensive guide covers all new features, implementation patterns, and best practices.
 
 ### Key Highlights
