--- a/content/payments/billpay/api-integration/plan-mdm-integration.mdx
+++ b/content/payments/billpay/api-integration/plan-mdm-integration.mdx
@@ -8,6 +8,10 @@ visible_in_sidebar: true
 
 ## Overview
 
+This guide covers plan-based billers - a specialized subset of BBPS billers that require plan selection as part of the payment flow.
+
+📖 **For standard bill payment integration fundamentals → [Paying Bills Integration Guide](./paying_bills.mdx)**
+
 The **Bharath Bill Payment System (BBPS) Plan Master Data Management (MDM)** API enables billers to offer subscription-based services through the BBPS ecosystem. This system is specifically designed for billers who don't have traditional outstanding bills but instead offer plan-based services that customers must select and pay for upfront.
 
 ### Key Use Cases
@@ -106,6 +110,8 @@ Dynamic plan billers offer personalized plans based on customer account details:
 **Start Here:** What type of biller are you integrating?
 
 The `planRequirement` is a field obtained from the list billers api.
+
+📖 **See how plan billers fit into the overall payment flow → [RefId-Based Payment Construction](./paying_bills.mdx#2-refid-based-payment-construction)**
 
 ```
 Is planRequirement = "MANDATORY"?
