Restructure docs + enhance bill pay guides

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -154,6 +154,9 @@ A standard structure for representing errors in API responses or callbacks.
 | amount                 | `integer`                                               | Amount in paise                      |
 | timestamp              | `date-time`                                             | Timestamp                            |
 | selectedPaymentOptions | [Selected Payment Option](#selected-payment-option)`[]` | Array of selected payment options    |
+| accountInfo            | `string` (Mandatory)                                    | NPCI-compatible instrument info for the payment instrument. |
+| custConvFee            | `integer` (Optional)                                    | Customer convenience fee in paise (when applicable). |
+| Id                     | `string` (Optional)                                     | Plan ID for plan-based billers.      |
 
 ## Payment Bill
 
