--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -124,13 +124,19 @@ Setu will append the following default paths to this callback URL, to alert your
 
 There are also other events that are not related to the core BillPay APIs, but are updates about the businesses on BBPS.
 
-This would include alerts on businesses that may be delisted from BBPS, or if a business updates the type of identifier they accept to fetch a customer’s bill. If you maintain a database of BBPS businesses, you may want to use such events to stay up-to-date. Find the full list of events <a href="/payments/billpay/api-integration/webhook">here</a>.
+This would include alerts on businesses that may be delisted from BBPS, or if a business updates the type of identifier they accept to fetch a customer’s bill. If you maintain a database of BBPS businesses, you may want to use such events to stay up-to-date. Find the full list of events <a href="/payments/billpay/api-integration/webhooks">here</a>.
 
 <hr class="primary" />
 
 ### Step 3 — Start API integration
 
-Once you have received your API keys and agent ID for testing, you can integration with our <a href="/payments/billpay/api-integration/apis" target="_blank">APIs</a> and start testing out different scenarios for fetching/paying bills or for raising disputes and managing its resolution.
+Once you have received your API keys and agent ID for testing, you can start integrating with our APIs. Begin with the <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a> which covers the 3 core payment flows:
+
+- **Bill Fetch → Payment** - For customers who want to see current bill amounts
+- **Bill Validation → Payment** - For account verification before payment  
+- **Direct Payment** - For known amounts without prior fetch
+
+Use the <a href="/payments/billpay/api-integration/api-reference" target="_blank">complete API reference</a> for detailed endpoint specifications.
 
 <hr class="primary" />
 
