updates to titles & menu items

--- a/content/payments/billpay/api-integration/harmonization_of_tat.mdx
+++ b/content/payments/billpay/api-integration/harmonization_of_tat.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Harmonization of TAT
-page_title: Harmonization Of TAT (Disputes Api)
+page_title: Harmonization Of TAT (Disputes API)
 order: 11
 visible_in_sidebar: true
 ---
