--- a/content/payments/billpay/api-integration/multi-bill-processing.mdx
+++ b/content/payments/billpay/api-integration/multi-bill-processing.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Multi-Bill Processing
-page_title: Multi-Bill Processing Integration Guide  
+sidebar_title: Paying for multiple bills
+page_title: Paying for multiple bills
 order: 8
 visible_in_sidebar: true
 ---
