--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Remitter & Account Info
-page_title: Remitter & Account Info (Format Reference)
+sidebar_title: Passing Remitter Details in Bill Payments
+page_title: Passing Remitter Details in Bill Payments
 order: 6
 visible_in_sidebar: true
 ---
