--- a/content/payments/billpay/api-integration/plan-mdm-integration.mdx
+++ b/content/payments/billpay/api-integration/plan-mdm-integration.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Plans
-page_title: When Users Need to Select Plans Before Payment
+sidebar_title: Paying for plans
+page_title: Paying for plans
 order: 9
 visible_in_sidebar: true
 ---
